lingxi-code/apps/engine-mobile/tests/snapshots/mobile_tool_list_snapshot__mobile_tool_list.snap
---
source: apps/engine-mobile/tests/mobile_tool_list_snapshot.rs
assertion_line: 52
expression: names
---
- AskUserQuestion
- Config
- CronCreate
- CronDelete
- CronList
- Edit
- EnterPlanMode
- ExitPlanMode
- Glob
- Grep
- Monitor
- MultiEdit
- NotebookEdit
- PushNotification
- Read
- RemoteTrigger
- ScheduleWakeup
- SendMessage
- SendUserMessage
- Skill
- Sleep
- StructuredOutput
- TaskCreate
- TaskGet
- TaskList
- TaskOutput
- TaskStop
- TaskUpdate
- TodoWrite
- ToolSearch
- WebFetch
- WebSearch
- Write
- camera
- clipboard
- notification
- share
- speech
- voice
