lingxi-code/apps/engine-mobile/tests/snapshots/mobile_tool_list_snapshot__mobile_tool_list_host_only.snap
---
source: apps/engine-mobile/tests/mobile_tool_list_snapshot.rs
expression: names
---
- AskUserQuestion
- Config
- CronCreate
- CronDelete
- CronList
- Edit
- EnterPlanMode
- ExitPlanMode
- Glob
- Grep
- ListAgents
- NotebookEdit
- PushNotification
- Read
- RemoteTrigger
- ReportFindings
- ScheduleWakeup
- SendMessage
- SendUserMessage
- Skill
- Sleep
- StructuredOutput
- TaskCreate
- TaskGet
- TaskList
- TaskOutput
- TaskStop
- TaskUpdate
- TodoWrite
- ToolSearch
- WebFetch
- WebSearch
- Write
- camera
- clipboard
- notification
- share
- speech
- voice
